--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "react-native-web": "~0.13.12",
     "react-query": "^3.19.1",
     "react-sanctum": "^1.0.1",
+    "react-select": "^4.3.1",
     "styled-components": "^5.3.0",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "expo-image-picker": "~10.2.2",
+    "expo-image-manipulator": "~9.2.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
