--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@babel/preset-typescript": "^7.12.17",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
