--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@hookform/resolvers": "^2.7.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.8",
-    "@react-navigation/material-bottom-tabs": "^5.3.15",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.3",
-    "@types/react": "^17.0.18",
-    "@types/react-native": "^0.64.13",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
     "axios": "^0.21.1",
-    "core-js": "^3.16.0",
-    "expo": "^42.0.0",
+    "core-js": "^3.16.2",
+    "expo": "^42.0.3",
     "expo-constants": "~11.0.1",
     "expo-device": "~3.3.0",
     "expo-image-manipulator": "~9.2.2",
@@ -31,15 +31,18 @@
     "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.2",
+    "postinstall": "^0.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-error-boundary": "^3.1.3",
-    "react-hook-form": "^7.11.1",
+    "react-hook-form": "^7.12.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-anchor-carousel": "^4.0.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-maps": "^0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
@@ -48,28 +51,31 @@
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "react-query": "^3.19.1",
+    "react-native-web-swiper": "^2.2.1",
+    "react-native-web-webview": "^1.0.2",
+    "react-query": "^3.19.6",
     "react-query-auth": "^1.1.0",
-    "react-sanctum": "^1.0.1",
+    "react-sanctum": "^2.1.2",
     "react-select": "^4.3.1",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
     "yup": "^0.32.9",
     "zod": "^3.7.2",
-    "zustand": "^3.5.8"
+    "zustand": "^3.5.9"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@babel/preset-typescript": "^7.12.17",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "eslint": "^7.31.0",
+    "@babel/preset-typescript": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-native": "^3.11.0",
+    "file-loader": "^6.2.0",
     "husky": "^7.0.1",
-    "lint-staged": "^11.1.1",
+    "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "typescript": "~4.0.0"
   },
