--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-collapsible": "^1.6.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "^1.7.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-maps": "^0.28.0",
@@ -51,7 +52,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.13.18",
+    "react-native-web-maps": "^0.3.0",
     "react-native-web-swiper": "^2.2.1",
     "react-native-web-webview": "^1.0.2",
     "react-query": "^3.19.6",
@@ -68,6 +70,7 @@
     "@babel/core": "~7.9.0",
     "@babel/preset-typescript": "^7.15.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
