--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-native": "~0.63.2",
     "axios": "^0.21.1",
     "core-js": "^3.16.2",
+    "date-fns": "^2.23.0",
     "expo": "^42.0.3",
     "expo-constants": "~11.0.1",
     "expo-device": "~3.3.0",
@@ -31,6 +32,8 @@
     "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "postinstall": "^0.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -40,8 +43,10 @@
     "react-native-anchor-carousel": "^4.0.1",
     "react-native-collapsible": "^1.6.0",
     "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "^1.7.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-maps": "^0.28.0",
