--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-    "react-native-maps": "^0.29.3",
+    "react-native-maps": "0.28.0",
     "react-native-multi-selectbox": "^1.5.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.2",
