--- a/package.json
+++ b/package.json
@@ -75,9 +75,10 @@
   },
   "devDependencies": {
     "@babel/core": "~7.15.5",
+    "@babel/eslint-parser": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
