--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.5",
     "lodash": "^4.17.21",
+    "modal-react-native-web": "^0.2.0",
     "moment": "^2.29.1",
     "postinstall": "^0.7.3",
     "react": "17.0.2",
