--- a/package.json
+++ b/package.json
@@ -9,39 +9,39 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@expo/webpack-config": "~0.16.0",
-    "@hookform/resolvers": "^2.8.1",
-    "@react-native-async-storage/async-storage": "~1.15.8",
+    "@expo/webpack-config": "~0.16.6",
+    "@hookform/resolvers": "^2.8.2",
+    "@react-native-async-storage/async-storage": "~1.15.9",
     "@react-native-community/masked-view": "0.1.11",
-    "@react-navigation/bottom-tabs": "^6.0.7",
-    "@react-navigation/material-bottom-tabs": "^6.0.7",
-    "@react-navigation/native": "^6.0.4",
-    "@react-navigation/stack": "^6.0.9",
-    "@types/react": "~17.0.24",
-    "@types/react-native": "~0.65.1",
-    "axios": "^0.21.4",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "@types/react": "~17.0.33",
+    "@types/react-native": "~0.66.1",
+    "axios": "^0.24.0",
     "babel-eslint": "^10.1.0",
-    "core-js": "^3.18.1",
-    "date-fns": "^2.24.0",
-    "expo": "^42.0.4",
-    "expo-constants": "~11.0.1",
-    "expo-device": "~3.3.0",
-    "expo-image-manipulator": "~9.2.2",
-    "expo-image-picker": "~10.2.3",
-    "expo-location": "~12.1.2",
-    "expo-notifications": "~0.12.3",
-    "expo-secure-store": "~10.2.0",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.5",
+    "core-js": "^3.19.0",
+    "date-fns": "^2.25.0",
+    "expo": "^43.0.1",
+    "expo-constants": "^12.1.3",
+    "expo-device": "^4.0.3",
+    "expo-image-manipulator": "^10.1.2",
+    "expo-image-picker": "^11.0.3",
+    "expo-location": "~13.0.4",
+    "expo-notifications": "^0.13.3",
+    "expo-secure-store": "~11.0.3",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.5",
     "lodash": "^4.17.21",
     "modal-react-native-web": "^0.2.0",
     "moment": "^2.29.1",
-    "postinstall": "^0.7.3",
+    "postinstall": "^0.7.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-error-boundary": "^3.1.3",
-    "react-hook-form": "^7.16.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-hook-form": "^7.18.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-43.0.0.tar.gz",
     "react-native-anchor-carousel": "^4.0.1",
     "react-native-collapsible": "^1.6.0",
     "react-native-elements": "^3.4.2",
@@ -51,46 +51,47 @@
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-    "react-native-maps": "0.28.0",
+    "react-native-maps": "^0.29.3",
     "react-native-multi-selectbox": "^1.5.0",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "~2.2.2",
+    "react-native-reanimated": "~2.2.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "12.1.1",
-    "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.17.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-unimodules": "^0.15.0",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "~0.17.5",
     "react-native-web-maps": "^0.3.0",
     "react-native-web-swiper": "^2.2.1",
     "react-native-web-webview": "^1.0.2",
-    "react-query": "^3.24.4",
+    "react-query": "^3.29.0",
     "react-query-auth": "^1.1.0",
     "react-sanctum": "^2.1.2",
-    "react-select": "^5.0.0",
-    "styled-components": "^5.3.1",
+    "react-select": "^5.1.0",
+    "styled-components": "^5.3.3",
     "styled-system": "^5.1.5",
-    "yup": "^0.32.9",
-    "zod": "^3.9.3",
-    "zustand": "^3.5.10"
+    "yup": "^0.32.11",
+    "zod": "^3.11.6",
+    "zustand": "^3.6.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.15.5",
+    "@babel/core": "~7.15.8",
     "@babel/eslint-parser": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-native": "^3.11.0",
     "file-loader": "^6.2.0",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
-    "typescript": "~4.4.3"
+    "typescript": "~4.4.4"
   },
   "husky": {
     "hooks": {
