--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,27 @@
-// tsconfig.json
 {
   "compilerOptions": {
-    "checkJs": true,
+    "target": "esnext",
+    "module": "commonjs",
+    "lib": ["es2017"],
+    "allowJs": true,
     "jsx": "react-native",
-    "baseUrl": ".",
-    "module": "esnext",
+    "noEmit": true,
+    "isolatedModules": true,
+    "strict": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": false,
+    "resolveJsonModule": true,
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "noEmit": true
+    }
   },
-  "extends": "expo/tsconfig.base",
-  "breadcrumbs.enabled": true,
-  "window.title": "${dirty} ${activeEditorMedium}${separator}${rootName}",
-  "editor.minimap.renderCharacters": false,
-  "editor.minimap.maxColumn": 200,
-  "editor.minimap.showSlider": "always",
-  "editor.renderWhitespace": "all",
-  "editor.smoothScrolling": true,
-  "editor.cursorBlinking": "phase",
-  "editor.cursorSmoothCaretAnimation": true,
-  "files.insertFinalNewline": true,
-  "files.trimTrailingWhitespace": true
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ],
+  "extends": "expo/tsconfig.base"
 }
