--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,35 +6,16 @@
     "react-native/react-native": true
   },
   "parser": "@typescript-eslint/parser",
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "parserOptions": {
+    "project": "./tsconfig.json",
     "ecmaFeatures": {
       "jsx": true
     },
     "ecmaVersion": 2021,
     "sourceType": "module"
   },
-  "plugins": ["prettier", "react", "react-native"],
-  "rules": {
-    "import/no-unresolved": 0,
-    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
-    "react/prop-types": "off",
-    "react/react-in-jsx-scope": "off",
-    "no-tabs": [
-      "error",
-      {
-        "allowIndentationTabs": true
-      }
-    ],
-    "no-use-before-define": "off",
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ]
-  },
-
+  "plugins": ["prettier", "react", "react-native", "@typescript-eslint"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "settings": {
     "react": {
       "version": "detect"
