--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-native-collapsible": "^1.6.0",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "https://github.com/software-mansion/react-native-gesture-handler#62e9eb66bced3b4c55042399d761baee7d961140",
     "react-native-get-random-values": "~1.7.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-iphone-x-helper": "^1.3.1",
