--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,13 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "target": "ESNext",
-    // "module": "commonjs",
-    "lib": ["DOM", "ESNext"],
-    "allowJs": true,
-    "jsx": "react-native",
-    "noEmit": true,
-    // "isolatedModules": true,
     "strict": true,
     "noImplicitAny": true,
-    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
     "experimentalDecorators": true,
+    // "target": "ESNext",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
   },
-  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"],
-  "extends": "expo/tsconfig.base"
 }
