--- a/package.json
+++ b/package.json
@@ -1,99 +1,5 @@
 {
   "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "dev": "tsc --watch",
-    "lint": "eslint --ext .js,.ts,.tsx,.jsx .",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|jsx|tsx|json)\""
-  },
-  "dependencies": {
-    "@expo/webpack-config": "~0.16.2",
-    "@hookform/resolvers": "^2.8.8",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/datetimepicker": "4.0.0",
-    "@react-native-community/masked-view": "0.1.11",
-    "@react-native-picker/picker": "2.2.1",
-    "@react-navigation/bottom-tabs": "^6.2.0",
-    "@react-navigation/material-bottom-tabs": "^6.1.1",
-    "@react-navigation/native": "^6.0.8",
-    "@react-navigation/stack": "^6.1.1",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "axios": "^0.25.0",
-    "babel-eslint": "^10.1.0",
-    "core-js": "^3.21.0",
-    "date-fns": "^2.28.0",
-    "expo": "^44.0.6",
-    "expo-constants": "~13.0.1",
-    "expo-device": "~4.1.0",
-    "expo-image-manipulator": "~10.2.0",
-    "expo-image-picker": "~12.0.1",
-    "expo-location": "~14.0.1",
-    "expo-notifications": "~0.14.0",
-    "expo-secure-store": "~11.1.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
-    "lodash": "^4.17.21",
-    "modal-react-native-web": "^0.2.0",
-    "moment": "^2.29.1",
-    "postinstall": "^0.7.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-error-boundary": "^3.1.4",
-    "react-hook-form": "^7.26.0",
-    "react-native": "0.64.3",
-    "react-native-anchor-carousel": "^4.0.1",
-    "react-native-appearance": "~0.3.3",
-    "react-native-collapsible": "^1.6.0",
-    "react-native-elements": "^3.4.2",
-    "react-native-fast-image": "^8.5.11",
-    "react-native-gesture-handler": "https://github.com/software-mansion/react-native-gesture-handler#62e9eb66bced3b4c55042399d761baee7d961140",
-    "react-native-get-random-values": "~1.7.0",
-    "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "0.29.4",
-    "react-native-multi-selectbox": "^1.5.0",
-    "react-native-multi-selectbox-typescript": "^0.1.2",
-    "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "12.1.1",
-    "react-native-unimodules": "~0.15.0",
-    "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "react-native-web-maps": "^0.3.0",
-    "react-native-web-swiper": "^2.2.3",
-    "react-native-web-webview": "^1.0.2",
-    "react-query": "^3.34.13",
-    "react-query-auth": "^1.1.0",
-    "react-sanctum": "^2.1.2",
-    "react-select": "^5.2.2",
-    "styled-components": "^5.3.3",
-    "styled-system": "^5.1.5",
-    "yup": "^0.32.11",
-    "zod": "^3.11.6",
-    "zustand": "^3.6.9"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-typescript": "^7.16.7",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-native": "^4.0.0",
-    "file-loader": "^6.2.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.3",
-    "prettier": "^2.5.1",
-    "typescript": "~4.3.5"
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -101,5 +7,99 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
+  },
+  "scripts": {
+    "dev": "tsc --watch",
+    "lint": "eslint --ext .js,.ts,.tsx,.jsx .",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|jsx|tsx|json)\""
+  },
+  "dependencies": {
+    "@expo/webpack-config": "^0.16.19",
+    "@hookform/resolvers": "^2.8.10",
+    "@react-native-async-storage/async-storage": "^1.17.5",
+    "@react-native-community/datetimepicker": "6.1.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.4.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@types/react-native": "^0.67.7",
+    "axios": "^0.27.2",
+    "babel-eslint": "^10.1.0",
+    "core-js": "^3.22.5",
+    "date-fns": "^2.28.0",
+    "expo": "^45.0.4",
+    "expo-constants": "^13.1.1",
+    "expo-device": "^4.2.0",
+    "expo-image-manipulator": "^10.3.1",
+    "expo-image-picker": "^13.1.1",
+    "expo-location": "^14.2.2",
+    "expo-notifications": "^0.15.2",
+    "expo-secure-store": "^11.2.0",
+    "expo-status-bar": "^1.3.0",
+    "expo-updates": "^0.13.1",
+    "lodash": "^4.17.21",
+    "modal-react-native-web": "^0.2.0",
+    "moment": "^2.29.3",
+    "postinstall": "^0.7.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-error-boundary": "^3.1.4",
+    "react-hook-form": "^7.31.2",
+    "react-native": "^0.68.2",
+    "react-native-anchor-carousel": "^4.0.1",
+    "react-native-appearance": "^0.2.1",
+    "react-native-collapsible": "^1.6.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.5.11",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "0.30.2",
+    "react-native-multi-selectbox": "^1.5.0",
+    "react-native-multi-selectbox-typescript": "^0.1.2",
+    "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-unimodules": "^0.15.0",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "^0.17.7",
+    "react-native-web-maps": "^0.1.0",
+    "react-native-web-swiper": "^2.2.3",
+    "react-native-web-webview": "^1.0.2",
+    "react-query": "^3.39.0",
+    "react-query-auth": "^1.1.0",
+    "react-sanctum": "^2.1.2",
+    "react-select": "^5.3.2",
+    "styled-components": "^5.3.5",
+    "styled-system": "^5.1.5",
+    "yup": "^0.32.11",
+    "zod": "^3.16.1",
+    "zustand": "^4.0.0-rc.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.0",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/react": "~17.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "file-loader": "^6.2.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.3",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   }
 }
