--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "yup": "^0.32.11",
+    "yup-locales": "^1.2.8",
     "zod": "^3.16.1",
     "zustand": "^4.0.0-rc.1"
   },
